--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@ y-redhat.skill
         }
         h1, h2 {
             color: #bb86fc;
+            font-size: 2.5rem; /* 大きな画面用 */
         }
         p {
             margin: 10px 0;
+            font-size: 1.1rem; /* 大きな画面用 */
         }
         a {
             color: #bb86fc;
@@ -27,6 +29,19 @@ y-redhat.skill
         }
         a:hover {
             text-decoration: underline;
+        }
+
+        /* スマートフォン向けのスタイル */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem; /* スマホ用 */
+            }
+            h2 {
+                font-size: 1.5rem; /* スマホ用 */
+            }
+            p {
+                font-size: 1rem; /* スマホ用 */
+            }
         }
     </style>
 </head>
